# canister

./: .cirrus.yml  .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md  canister.apparmor  rust-toolchain.toml
.github/workflows/: ci.yml  docs.yml  release.yml
ci/: check_ignored_tests.sh  check_unwraps.sh  coverage.sh  test_check_unwraps.sh  verify.sh
crates/can-cli/: Cargo.toml
crates/can-cli/src/: commands.rs  main.rs  recipes.rs  registry.rs
crates/can-dlp/: Cargo.toml
crates/can-dlp/fuzz/: Cargo.toml  README.md
crates/can-dlp/fuzz/fuzz_targets/: fuzz_decode_layers.rs  fuzz_detectors.rs  fuzz_full_scanner.rs  fuzz_normalize.rs  fuzz_unescape.rs
crates/can-dlp/src/: canary.rs  decode.rs  decompress.rs  detectors.rs  entropy.rs  error.rs  ids.rs  lib.rs  normalize.rs  redact.rs  registry.rs  scanner.rs  scopes.rs  streaming.rs  unescape.rs
crates/can-docgen/: Cargo.toml
crates/can-docgen/src/: main.rs
crates/can-log/: Cargo.toml
crates/can-log/src/: lib.rs
crates/can-net/: Cargo.toml
crates/can-net/src/: dns.rs  dns_cache.rs  lib.rs  netns.rs  pasta.rs  slirp.rs
crates/can-policy/: Cargo.toml
crates/can-policy/src/: access.rs  config.rs  lib.rs  manifest.rs  profile.rs  whitelist.rs
crates/can-policy/src/config/: dlp.rs  env.rs  error.rs  filesystem.rs  merge.rs  mod.rs  network.rs  process.rs  proxy.rs  recipe.rs  recipe_merge.rs  resources.rs  sandbox.rs  syscalls.rs  tests.rs  trust.rs
crates/can-policy/src/manifest/: mod.rs  tests.rs
crates/can-proxy/: Cargo.toml
crates/can-proxy/src/: ca.rs  client.rs  egress.rs  events.rs  lib.rs  policy.rs  server.rs  wasm.rs  websocket.rs
crates/can-proxy/src/server/: dlp_ctx.rs  dlp_enforce.rs  lifecycle.rs  limits.rs  mod.rs  passthrough.rs  request.rs  response_scan.rs  responses.rs  stream_scan.rs  tunnel.rs  upstream.rs  util.rs
crates/can-proxy/tests/: integration.rs
crates/can-proxy/tests/fixtures/test-plugin/: Cargo.toml
crates/can-proxy/tests/fixtures/test-plugin/src/: lib.rs
crates/can-sandbox/: Cargo.toml
crates/can-sandbox/src/: capabilities.rs  cgroups.rs  lib.rs  namespace.rs  notifier.rs  overlay.rs  pipe_protocol.rs  process.rs  seccomp.rs  setup.rs
crates/can-sandbox/src/mac/: apparmor.rs  mod.rs  selinux.rs
crates/can-sandbox/src/notifier/: abi.rs  error.rs  eval_clone.rs  eval_net.rs  eval_proc.rs  fd_channel.rs  filter.rs  kernel.rs  mod.rs  outbound.rs  policy.rs  policy_config.rs  proc_mem.rs  supervisor.rs  tests.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  DLP.md  PROFILES.md  SECCOMP.md  book.toml  guardrails-agentic-development-plan.md  proxy-forwarding-plan.md  wasm-abi.md
docs/adr/: 0001-recipes-over-profiles.md  0002-recipe-composition-and-lifecycle.md  0003-seccomp-user-notif-supervisor.md  0004-mac-abstraction-layer.md  0005-project-manifest-and-recipe-sources.md  0006-unified-egress-model.md  0007-l7-proxy-wasm-filters.md
docs/src/: SUMMARY.md  introduction.md
docs/src/guide/: configuration.md  dlp.md  getting-started.md  seccomp.md
docs/theme/: custom.css
profiles/: elixir.toml  example.toml
recipes/: base.toml  cargo.toml  checksums.toml  default.toml  elixir.toml  example.toml  flatpak.toml  generic-strict.toml  gnu-store.toml  homebrew.toml  neovim.toml  nix.toml  node-build.toml  opencode.toml  python-pip.toml  snap.toml
recipes/tools/: cargo.toml  docker-config.toml  gh.toml  git.toml  go.toml  gpg-public.toml  helm.toml  kubectl.toml  npm.toml  pip.toml  pnpm.toml  podman-config.toml  poetry.toml  rustup.toml  ssh-agent.toml  uv.toml  yarn.toml
tests/integration/: lib.sh  run.sh  t_apparmor.sh  t_auto_detect.sh  t_basic.sh  t_capabilities.sh  t_cli_smoke.sh  t_composition.sh  t_dlp_base64.sh  t_dlp_canary.sh  t_dlp_dns_chunked.sh  t_dlp_events.sh  t_dlp_header.sh  t_dlp_response_canary.sh  t_dlp_streaming.sh  t_dns_filtering.sh  t_env_expansion.sh  t_filesystem.sh  t_monitor.sh  t_network.sh  t_notif_clone_namespace.sh  t_notif_connect.sh  t_notif_execve.sh  t_notif_socket.sh  t_proc_hardening.sh  t_process.sh  t_profiles.sh  t_proxy_seccomp_parity.sh  t_recipes.sh  t_registry.sh  t_resources.sh  t_seccomp.sh  t_selinux.sh  t_strict.sh
tests/integration/configs/: dns_filtered.toml  filesystem_deny.toml  minimal.toml  monitor.toml  network_direct.toml  network_none.toml  process_env.toml  process_env_full.toml  resources.toml  seccomp_allowlist.toml  seccomp_denylist.toml  strict.toml
