[package]
name = "can-dlp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Data Loss Prevention: credential detection, encoding chain recursion, scope enforcement"

[dependencies]
regex = "1"
base64 = "0.22"
percent-encoding = "2"
flate2 = "1"
brotli = "7"
rand = "0.8"
thiserror.workspace = true
serde.workspace = true
schemars.workspace = true
tracing.workspace = true
