[package]
name = "can-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Policy engine: config parsing, whitelist enforcement, seccomp profiles"

[dependencies]
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
