[package]
name = "can-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "L7 Proxy for Canister"

[features]
default = []
experimental-h2c = []

[dependencies]
tokio = { version = "1.37", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "full"] }
http-body-util = "0.1"
rcgen = { version = "0.12", features = ["x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
x509-parser = "0.16"
bytes = "1"
tracing = "0.1"
thiserror = "2"
can-policy = { path = "../can-policy" }
extism = "1.21.0"
base64 = "0.22.1"
serde_json.workspace = true
# Disable default features (which include `aws-lc-rs`) so the musl static
# build doesn't have to compile aws-lc-sys' C code. Ring is the configured
# crypto provider in `client.rs`.
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "ring", "tls12", "logging", "native-tokio"] }
tokio-util = { version = "0.7", features = ["io"] }
rustls-native-certs = "0.8.3"
can-net = { path = "../can-net" }
ipnet.workspace = true
parking_lot = "0.12"
url = "2"

[dev-dependencies]
wat = "1.248.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio-stream = "0.1"
