[package]
name = "can-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "L7 Proxy for Canister"

[features]
default = []
experimental-h2c = []

[dependencies]
tokio = { version = "1.37", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "full"] }
http-body-util = "0.1"
rcgen = { version = "0.12", features = ["x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
x509-parser = "0.16"
bytes = "1"
tracing = "0.1"
thiserror = "2"
serde_json = { workspace = true }
sha2 = { workspace = true }
can-policy = { path = "../can-policy" }
can-dlp = { path = "../can-dlp" }
rustls-native-certs = "0.8.3"
can-net = { path = "../can-net" }
ipnet.workspace = true

[dev-dependencies]
base64 = "0.22"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
flate2 = "1"
