[package]
name = "can-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core sandbox runtime: namespaces, seccomp, overlayfs, cgroups"

[dependencies]
can-policy.workspace = true
can-proxy = { path = "../can-proxy" }
can-net.workspace = true
can-log.workspace = true
thiserror.workspace = true
tracing.workspace = true
nix.workspace = true
tokio = { version = "1.37", features = ["rt", "net"] }
libc.workspace = true
